# praxis-chat

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.yml  eslint.config.js  nodemon.json  package-lock.json  package.json  playwright.config.ts  start-prod.sh  tsconfig.src.json  tsconfig.view.json  vite.config.mts  vitest.src.config.mts
.cursor/rules/: 00-overview.mdc
cli/: Cargo.toml  README.md  praxis-cli.mjs  stats-reports.mjs
cli/src/: cli.rs  db.rs  integrity.rs  main.rs  poll.rs  routes.rs  schema.rs  utils.rs  vote.rs
cli/stats-cli/: Cargo.toml  README.md
cli/stats-cli/src/: utils.rs
common/: README.md
common/instance-roles/: instance-role.constants.ts
common/messages/: message.constants.ts
common/poll-actions/: poll-action.constants.ts  poll-action.types.ts
common/polls/: poll.constants.ts  poll.types.ts  poll.utils.ts
common/proposal-actions/: proposal-action.constants.ts  proposal-action.types.ts
common/proposals/: proposal.constants.ts  proposal.types.ts
common/pub-sub/: pub-sub.constants.ts
common/roles/: app-ability.ts  instance-ability.ts  role.constants.ts  role.types.ts  role.utils.ts  server-ability.ts  server-role.constants.ts
common/server-configs/: server-config.constants.ts  server-config.types.ts
docs/: README.md  anon-users-and-invites.md  deployment.md  poll-entity-architecture.md  server-architecture.md
e2e/: 00-sign-up.spec.ts  run-e2e.ts
scripts/: stats-reports.mjs
src/: app.router.ts  main.ts
view/: index.html
(+550 files in other folders)
