[package]
name = "praxis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
owo-colors = "4.0"
sqlx = { version = "0.7", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "macros",
    "uuid",
] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
